cleaned up css selectors

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ div.gdrive {
   font-size: 0.9em; 
 }
 
-img.gdrive-icon {
+div.gdrive img {
   display: inline-block;
   vertical-align: text-top;
 }
